# GlassSDR

./: .gitignore  Cargo.toml  README.md
.claude/: loop-prompt.md  ralph-loop.local.md  settings.local.json
.claude/hooks/: block-dangerous.sh
.github/workflows/: build.yml
crates/mayhem-apps/: Cargo.toml
crates/mayhem-apps/src/: acars_rx.rs  adsb_rx.rs  adsb_rx_ext.rs  adsb_tx.rs  afsk_rx.rs  afsk_tx.rs  ais_rx.rs  am_rx.rs  aprs_rx.rs  apt_rx.rs  btle_comm.rs  btle_rx.rs  btle_tx.rs  capture_manager.rs  ctcss_dcs.rs  cw_rx.rs  dab_rx.rs  decoder_suite.rs  dmr_rx.rs  dpmr_rx.rs  dsc_rx.rs  encoder_suite.rs  epirb_rx.rs  ert_rx.rs  flex_rx.rs  flex_tx.rs  flipper_tx.rs  freq_counter.rs  freq_hopper.rs  gps_sim.rs  hrpt_rx.rs  iq_player.rs  keyfob_tx.rs  lge_tx.rs  lib.rs  looking_glass.rs  lrpt_rx.rs  mdc1200_tx.rs  morse_tx.rs  nfm_audio.rs  (+35 more)
crates/mayhem-apps/tests/: mode_switch.rs
crates/mayhem-dsp/: Cargo.toml
crates/mayhem-dsp/src/: afsk_demod.rs  afsk_mod.rs  audio_filter.rs  bpsk_demod.rs  ctcss.rs  cw_keyer.rs  decimation.rs  demod_am.rs  demod_fm.rs  demod_ssb.rs  eye_diagram.rs  fm_mod.rs  fsk_slicer.rs  gauss_fsk.rs  lib.rs  magnitude.rs  manchester.rs  ook_envelope.rs  ppm.rs  preamble.rs  pulse_analyze.rs  resample.rs  scanner_engine.rs  sig_gen.rs  spectrum.rs  spectrum_paint.rs  stereo_decode.rs  tone_detect.rs
crates/mayhem-dsp/tests/: phase1_blocks.rs
crates/mayhem-ipc/: Cargo.toml
crates/mayhem-ipc/src/: lib.rs
crates/mayhem-protocols/: Cargo.toml
crates/mayhem-protocols/src/: lib.rs
crates/mayhem-protocols/src/acars/: decode.rs  mod.rs
crates/mayhem-protocols/src/adsb/: callsign.rs  crc.rs  frame.rs  mod.rs  position.rs  velocity.rs
crates/mayhem-protocols/src/adsb_tx/: encode.rs  mod.rs
crates/mayhem-protocols/src/ais/: decode.rs  mod.rs
crates/mayhem-protocols/src/aprs/: mod.rs  parse.rs
crates/mayhem-protocols/src/apt/: image.rs  mod.rs
crates/mayhem-protocols/src/ax25/: encode.rs  frame.rs  mod.rs
crates/mayhem-protocols/src/baudot/: encode.rs  mod.rs
crates/mayhem-protocols/tests/: acars_protocol.rs  ais_protocol.rs  aprs_protocol.rs  ax25_protocol.rs  fixtures.rs  ook_protocol.rs  phase2b_protocols.rs  phase4_protocols.rs  phase5_encoders.rs  phase6a_tests.rs  phase6b_tests.rs  pocsag_protocol.rs  pocsag_roundtrip.rs  rds_protocol.rs
crates/mayhem-radio/: Cargo.toml
crates/mayhem-radio/src/: freq_policy.rs  lib.rs  sink.rs  source.rs
crates/mayhem-recorder/: Cargo.toml
crates/mayhem-recorder/src/: lib.rs
crates/mayhem-spike/: Cargo.toml  SPIKE_RESULTS.md
crates/mayhem-spike/ipc-spike/: package-lock.json  package.json
crates/mayhem-spike/ipc-spike/src/: App.tsx
crates/mayhem-spike/ipc-spike/src-tauri/: Cargo.toml  tauri.conf.json
crates/mayhem-spike/ipc-spike/src-tauri/src/: lib.rs  main.rs
docs/acceptance/: v0.1-foundation-nfm.md  v0.2-adsb-rx.md  v0.3-pocsag-tx.md
docs/superpowers/phase-specs/: phase-1-voice-audio.md  phase-2-fm-digital.md  phase-3-ook-subghz.md  phase-4-specialty-rx.md  phase-5-amateur-tx.md  phase-6-dualuse-tx.md  phase-7-utilities-games.md  phase-8-long-tail.md
docs/superpowers/plans/: 2026-05-05-mayhem-pc-phase-1.md  2026-05-05-mayhem-pc-phase-2a.md  2026-05-05-mayhem-pc-phase-2b.md  2026-05-05-mayhem-pc-phase-3.md  2026-05-05-mayhem-pc-phase-4.md  2026-05-05-mayhem-pc-phase-5.md  2026-05-05-mayhem-pc-phase-6a.md  2026-05-05-mayhem-pc-phase-6b.md  2026-05-05-mayhem-pc-phase-7a.md  2026-05-05-mayhem-pc-phase-7b.md  2026-05-05-mayhem-pc-phase-8a.md  2026-05-05-mayhem-pc-phase-8b.md  2026-05-05-mayhem-pc-phase-8c.md  2026-05-05-mayhem-pc-v0.1-foundation-nfm.md  2026-05-05-mayhem-pc-v0.2-adsb-rx.md  2026-05-05-mayhem-pc-v0.3-pocsag-tx.md
docs/superpowers/specs/: 2026-05-05-mayhem-pc-port-design.md  2026-05-06-record-button-and-waterfall-design.md
docs/ui/: 00-foundations.md  01-app-screens.md  LOOP-PROMPT.md  PROGRESS.md  ui-loop-prompt.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/.claude/: ralph-loop.local.md
frontend/public/: audio-worklet-processor.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AircraftMap.tsx  AircraftTable.tsx  AppShell.tsx  AudioSink.tsx  DecoderTable.tsx  FrequencyInput.tsx  LegalBanner.tsx  RecordBar.tsx  RecordButton.tsx  RecordingsPanel.tsx  TuningControls.tsx  TxAppShell.tsx  Waterfall.tsx
frontend/src/ipc/: commands.ts  events.ts
frontend/src/store/: index.ts
frontend/src/styles/: glass.css
frontend/src/theme/: appThemes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  runner.rs
(+249 files in other folders)
