[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/mayhem-spike/ipc-spike"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "GPL-2.0-or-later"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
ts-rs = "9"
futuresdr = { version = "0.0.36", features = ["seify"] }
num-complex = "0.4"
