[package]
name = "glass-sdr"
version = "0.0.1"
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
mayhem-apps = { path = "../crates/mayhem-apps" }
mayhem-ipc = { path = "../crates/mayhem-ipc" }
mayhem-recorder = { path = "../crates/mayhem-recorder" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["macos-private-api"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusb = "0.9"
libusb1-sys = { version = "0.7", features = ["vendored"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
