[package]
name = "mayhem-apps"
version = "0.0.1"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-io = "2"
futuresdr.workspace = true
mayhem-dsp = { path = "../mayhem-dsp" }
mayhem-ipc = { path = "../mayhem-ipc" }
mayhem-radio = { path = "../mayhem-radio" }
num-complex.workspace = true
rustfft = "6"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
